# breakout-haskell

./: .gitignore  README.md  breakout-haskell.cabal  particle.frag  particle.vert  shader.frag  shader.vert  stack.yaml
app/: Main.hs
src/: Config.hs  Types.hs
src/Data/: GameResource.hs  LevelLoader.hs
src/FRP/: Ball.hs  Block.hs  Paddle.hs  Particle.hs  Signal.hs
src/Graphics/: Renderer.hs
