name:                breakout-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/breakout-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          Yiyun Liu
copyright:           2017 Yiyun Liu
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
                   , shader.vert
                   , shader.frag
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Data.GameResource, Config, FRP.Signal,Graphics.Renderer
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , bytestring
                     , sdl2
                     , JuicyPixels
                     , vector
                     , time
                     , Yampa
                     , linear
  default-language:    Haskell2010
  ghc-options:         -funfolding-use-threshold=16 -fexcess-precision -optc-ffast-math 

executable breakout-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -eventlog 
  build-depends:       base
                     , breakout-haskell
  default-language:    Haskell2010

test-suite breakout-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , breakout-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/breakout-haskell
